JEI compat part 1